feat: 협업 플랫폼 주요 기능 구현 및 UI 개선
- 문서 CRUD, 공유/즐겨찾기/태그/검색/실시간 협업(WebSocket) 기능 추가
- 문서 생성 UI 개선: 에디터 영역에서 제목·태그·내용 한번에 작성
- 공유문서/최근열람/즐겨찾기 페이지 데이터 분리 버그 수정
- 프로젝트 그룹 기능 추가 (생성, 멤버 초대, 문서 공유)
- 프로필 설정 개선: 이미지 파일 업로드, 비밀번호 변경, 회원탈퇴
- Tabler Icons 웹폰트 패키지 설치 및 아이콘 렌더링 수정
- 사이드바 레이아웃 및 페이지 overflow 버그 수정
- Vite 개발 서버 프록시 설정 및 Docker Compose 구성